ADW: add sortable apps list for catalog setup.
The applications list from catalog configuration can be sorted
by their names or first install time.

Change-Id: I38b15c66685e819b5e4540fd5c234002754c54b2

--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -305,6 +305,7 @@
     <string name="shirtcuts_select_icon_pack">アイコンパックを選択</string>
     <string name="shirtcuts_restore_original">オリジナルに戻す</string>
 
+    <string name="sortType">並び替え\:</string>
     <string name="selectAll">すべて選択</string>
     <string name="AppGroupAll">"すべて"</string>
     <string name="AppGroupUn">"未設定"</string>
