Added option to lock Action Buttons in main dock
Change-Id: I4b6c03c1d8da4a9788692e43864df3e7eb8a78ec

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -170,6 +170,9 @@
     <string name="pref_title_hide_ab_bg">Ocultar fondo Botones de Acción</string>
     <string name="pref_summary_hide_ab_bg">Oculta el fondo de los botones de acción</string>
 
+    <string name="pref_title_lock_ab">Bloquear Botones de Acción</string>
+    <string name="pref_summary_lock_ab">Previene la edición de los Botones de Acción</string>
+
     <string name="pref_title_hide_icon_labels">Ocultar nombres</string>
     <string name="pref_summary_hide_icon_labels">Oculta los nombres de los iconos del escritorio</string>
 
